--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<center><h3>Heart Hop</h3></center>
 									<img src="../images/ButtonPush.gif" height="180" width="288"/>
 									<center><a href="../downloads/HeartHop.7z" download>download</a></center>
-									<center>Destroy the enemy hearts or hit their button. Grab 8 people!</center>
+									<center>Destroy the enemy hearts or hit their button!</center>
 								</div>
 								<div class="project">
 									<center><h3>Throne Throttle</h3></center>
