--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html >
 	<head>
 		<meta charset="UTF-8">
-		<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-animate.min.js"></script>
-		<script type="text/javascript" src="../controller/portfolioController.js"></script>
-		<link type="text/css" rel="stylesheet" href="../style/stylesheet.css">
+		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<link type="text/css" rel="stylesheet" href="./style/stylesheet.css">
 	</head>
 	
 	<body ng-app="portfolio">
@@ -21,15 +17,9 @@
 					<div class="main-page-content">
 						<span class="home-container">
 							<div class="portrait-container">
-								<img class="portrait" src="../images/portrait.png" width="250" height="267">
+								<img class="portrait" src="./images/portrait.png" width="250" height="267">
 							</div>
 						</span>
-						<div class="programming-btn-container">
-							<img ng-click="programmingButton()" class="image-btn programming-anchor" src="../images/programming.png" width="200" width="200" />
-						</div>
-						<div class="programming-btn-container music-btn">
-							<img ng-click="musicButton()" class="image-btn music-anchor" src="../images/music.png" width="200" width="200" />
-						</div>
 					</div>
 					<div class="programming-content">
 						<div class="side-content-container">
@@ -43,21 +33,21 @@
 							<div class="programming-projects">
 								<div class="project">
 									<center><h3>Train Track Trouble</h3></center>
-									<img src="../images/TTT.png" height="180" width="288"/>
+									<img src="./images/TTT.png" height="180" width="288"/>
 									<center>Battle your friends in a 2v2 train brawl!</center>
-									<center><a href="../downloads/TrainTrackTrouble.7z" download>download</a></center>
+									<center><a href="./downloads/TrainTrackTrouble.7z" download>download</a></center>
 								</div>
 								<div class="project">
 									<center><h3>Heart Hop</h3></center>
-									<img src="../images/ButtonPush.gif" height="180" width="288"/>
+									<img src="./images/ButtonPush.gif" height="180" width="288"/>
 									<center>Destroy the enemy hearts or hit their button!</center>
-									<center><a href="../downloads/HeartHop.7z" download>download</a></center>
+									<center><a href="./downloads/HeartHop.7z" download>download</a></center>
 								</div>
 								<div class="project">
 									<center><h3>Throne Throttle</h3></center>
-									<img src="../images/ThroneThrottle.png" height="180" width="288"/>
+									<img src="./images/ThroneThrottle.png" height="180" width="288"/>
 									<center>Capture the hill while driving cars!</center>
-									<center><a href="../downloads/ThroneThrottle.7z" download>download</a></center>
+									<center><a href="./downloads/ThroneThrottle.7z" download>download</a></center>
 								</div>
 							</div>
 						</div>
