--- a/index.html
+++ b/index.html
@@ -1,88 +1,88 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<title>Nicholas Tesija</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-		<link type="text/css" rel="stylesheet" href="./style/stylesheet.css">
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<link type="text/css" rel="stylesheet" href="styles/stylesheet.css">
 	</head>
 	
-	<body ng-app="portfolio">
-		<div ng-controller="portfolioController">
-			<center><h1>Nicholas I. Tesija</h1></center>
-			<div class="content-container">
-				<div class="content-wrapper" ng-class="{'programming-swipe': showProgramming, 'main-swipe-from-programming': swipeFromProgramming, 'music-swipe' : showMusic, 'main-swipe-from-music' : swipeFromMusic}">
-					<div class="main-page-content">
-						<span class="home-container">
-							<div class="portrait-container">
-								<img class="portrait" src="./images/portrait.png" width="250" height="267">
+	<body>
+		<div class="demo-layout-waterfall mdl-layout mdl-js-layout">
+			<header class="mdl-layout__header mdl-layout__header--waterfall">
+				<div class="mdl-layout__header-row portfolio-header-row">
+					<span class="mdl-layout__title">
+						<div class="portfolio-logo"></div>
+						<div class="mdl-layout__title">Nicholas I. Tesija</div>
+					</span>
+				</div>
+			</header>
+			<main class="mdl-layout__content">
+				<div class="page-content">
+					<div class="mdl-grid portfolio-main-content">
+						<div class="mdl-cell mdl-card mdl-shadow--4dp">
+							<div class="mdl-card__media">
+								<img class="card-image" src="images/HeartHop.gif">
 							</div>
-						</span>
-					</div>
-					<div class="programming-content">
-						<div class="side-content-container">
-							<button class="btn btn-right" ng-click="backButton(true)">Main Page <span class="glyphicon glyphicon-arrow-right"></span></button>
-							<div>
-								<center><h1>Programming</h1></center>
+							<div class="mdl-card__title">
+								<h2 class="mdl-card__title-text">Heart Hop</h2>
 							</div>
-							<div class="content-description">
-								{{programmingDescription}}
+							<div class="mdl-card__supporting-text">
+								Fast-paced 8 player team battle! This was created for a 48 hour game jam. Our team won 1st place with this game.
 							</div>
-							<div class="programming-projects">
-								<div class="project">
-									<center><h3>Train Track Trouble</h3></center>
-									<img src="./images/TTT.png" height="180" width="288"/>
-									<center>Battle your friends in a 2v2 train brawl!</center>
-									<center><a href="./downloads/TrainTrackTrouble.7z" download>download</a></center>
-								</div>
-								<div class="project">
-									<center><h3>Heart Hop</h3></center>
-									<img src="./images/ButtonPush.gif" height="180" width="288"/>
-									<center>Destroy the enemy hearts or hit their button!</center>
-									<center><a href="./downloads/HeartHop.7z" download>download</a></center>
-								</div>
-								<div class="project">
-									<center><h3>Throne Throttle</h3></center>
-									<img src="./images/ThroneThrottle.png" height="180" width="288"/>
-									<center>Capture the hill while driving cars!</center>
-									<center><a href="./downloads/ThroneThrottle.7z" download>download</a></center>
-								</div>
+							<div class="mdl-card__actions mdl-card--border">
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/HeartHop.7z" download>Download</a>
 							</div>
 						</div>
-					</div>
-					<div class="music-content">
-						<div class="side-content-container">
-							<div class="music-content-nav-bar">
-								<button class="btn" ng-click="backButton(false)"><span class="glyphicon glyphicon-arrow-left"></span> Main Page</button>
-								<center><h1>Music</h1></center>
+						<div class="mdl-cell mdl-card mdl-shadow--4dp">
+							<div class="mdl-card__media">
+								<img class="card-image" src="images/TrainTrackTrouble.png">
 							</div>
-							<div class="content-description">
-								{{musicDescription}}
+							<div class="mdl-card__title">
+								<h2 class="mdl-card__title-text">Train Track Trouble</h2>
 							</div>
-							<div class="music-content-soundcloud">
-								<iframe width="33%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/270103307&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-								<iframe width="33%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/235173886&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-								<iframe width="33%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/185797860&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-								<iframe width="33%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/185796989&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-								<iframe width="33%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/185776365&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-								<iframe width="33%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/185797858&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+							<div class="mdl-card__supporting-text">
+								Battle your friends in a fast paced team train battle! This was my team's final project for EECS 494.
+							</div>
+							<div class="mdl-card__actions mdl-card--border">
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/TrainTrackTrouble.7z" download>Download</a>
+							</div>
+						</div>
+						<div class="mdl-cell mdl-card mdl-shadow--4dp">
+							<div class="mdl-card__media">
+								<img class="card-image" src="images/ThroneThrottle.png">
+							</div>
+							<div class="mdl-card__title">
+								<h2 class="mdl-card__title-text">Throne Throttle</h2>
+							</div>
+							<div class="mdl-card__supporting-text">
+								Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
+							</div>
+							<div class="mdl-card__actions mdl-card--border">
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/ThroneThrottle.7z" download>Download</a>
+							</div>
+						</div>
+						<div class="mdl-cell mdl-card mdl-shadow--4dp">
+							<div class="mdl-card__media">
+								<img class="card-image" src="images/HopCatTapper.png">
+							</div>
+							<div class="mdl-card__title">
+								<h2 class="mdl-card__title-text">HopCat Tapper</h2>
+							</div>
+							<div class="mdl-card__supporting-text">
+								Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
+							</div>
+							<div class="mdl-card__actions mdl-card--border">
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/ThroneThrottle.7z" download>Download</a>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="more-info">
-				<center>
-					<h4>More Information</h4>
-					<div class="more-info-btn-container">
-						<button class="btn more-info-btn" ng-click="mailTo()"><i class="fa fa-envelope" aria-hidden="true"></i></button>
-						<button class="btn more-info-btn" ng-click="redirectToLinkedIn()"><i class="fa fa-linkedin" aria-hidden="true"></i></button>
-						<button class="btn more-info-btn" ng-click="redirectToGitHub()"><i class="fa fa-github" aria-hidden="true"></i></button>
-					</div>
-				</center>
-			</div>
+			</main>
 		</div>
 	</body>
 </html>
