--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 				<div class="mdl-layout__header-row portfolio-header-row">
 					<span class="mdl-layout__title">
 						<div class="portfolio-logo"></div>
-						<div class="mdl-layout__title">Nicholas I. Tesija</div>
+						<span class="mdl-layout__title">Nicholas I. Tesija</span>
+						<a class="email" href="mailto:ntesija@umich.edu">ntesija@umich.edu</a>
 					</span>
 				</div>
 			</header>
@@ -54,24 +55,38 @@
 						</div>
 						<div class="mdl-cell mdl-card mdl-shadow--4dp">
 							<div class="mdl-card__media">
-								<img class="card-image" src="images/ThroneThrottle.png">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">Throne Throttle</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/ThroneThrottle.7z" download>Download</a>
-							</div>
-						</div>
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
 								<img class="card-image" src="images/HopCatTapper.png">
 							</div>
 							<div class="mdl-card__title">
 								<h2 class="mdl-card__title-text">HopCat Tapper</h2>
+							</div>
+							<div class="mdl-card__supporting-text">
+								Want to find out what the most alcohol per dollar you can get at HopCat? Check out the HopCat Tapper!
+							</div>
+							<div class="mdl-card__actions mdl-card--border">
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://github.com/ntesija/HopCatTapper" >View Source</a>
+							</div>
+						</div>
+						<div class="mdl-cell mdl-card mdl-shadow--4dp">
+							<div class="mdl-card__media">
+								<img class="card-image" src="images/SoundCloud.png">
+							</div>
+							<div class="mdl-card__title">
+								<h2 class="mdl-card__title-text">Soundcloud</h2>
+							</div>
+							<div class="mdl-card__supporting-text">
+								I make songs for video games, check out my SoundCloud if you are interested!
+							</div>
+							<div class="mdl-card__actions mdl-card--border">
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://soundcloud.com/nauticalnik" >View</a>
+							</div>
+						</div>
+						<div class="mdl-cell mdl-card mdl-shadow--4dp">
+							<div class="mdl-card__media">
+								<img class="card-image" src="images/ThroneThrottle.png">
+							</div>
+							<div class="mdl-card__title">
+								<h2 class="mdl-card__title-text">Throne Throttle</h2>
 							</div>
 							<div class="mdl-card__supporting-text">
 								Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
