--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	
 	<body>
-		<div class="demo-layout-waterfall mdl-layout mdl-js-layout">
+		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 			<header class="mdl-layout__header mdl-layout__header--waterfall">
 				<div class="mdl-layout__header-row portfolio-header-row">
 					<span class="mdl-layout__title">
