changed hopcat tapper to http

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								A web based version of my HopCat Tapper. Also looks at bottles and other locations for you!
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://www.HopCatTapper.com" >View</a>
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="http://www.HopCatTapper.com" >View</a>
 							</div>
 						</div>
 						<div class="mdl-cell mdl-card mdl-shadow--4dp">
