updated for hopcattapper website maintenence

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 								<h2 class="mdl-card__title-text">HopCatTapper.com</h2>
 							</div>
 							<div class="mdl-card__supporting-text">
-								A web based version of my HopCat Tapper. Also looks at bottles and other locations for you!
+								CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper. Also looks at bottles and other locations for you!
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="http://www.HopCatTapper.com" >View</a>
+								<!-- <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="http://www.HopCatTapper.com" >View</a> -->
+								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://github.com/ntesija/HopCatTapper/tree/website">View Source</a>
+
 							</div>
 						</div>
 						<div class="mdl-cell mdl-card mdl-shadow--4dp">
@@ -89,7 +91,7 @@
 								<h2 class="mdl-card__title-text">Soundcloud</h2>
 							</div>
 							<div class="mdl-card__supporting-text">
-								I make songs for video games, check out my SoundCloud if you are interested!
+								I make songs for video games. There are some samples and full soundtracks on my SoundCloud, check it out!
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
 								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://soundcloud.com/nauticalnik" >View</a>
