--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<body>
 		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-			<header class="mdl-layout__header mdl-layout__header--waterfall">
+			<header class="mdl-layout__header">
 				<div class="mdl-layout__header-row portfolio-header-row">
 					<span class="mdl-layout__title">
 						<div class="portfolio-logo"></div>
@@ -61,7 +61,7 @@
 								<h2 class="mdl-card__title-text">HopCatTapper.com</h2>
 							</div>
 							<div class="mdl-card__supporting-text">
-								CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper. Also looks at bottles and other locations for you!
+								CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper.
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
 								<!-- <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="http://www.HopCatTapper.com" >View</a> -->
