removed legacy data

--- a/index.html
+++ b/index.html
@@ -1,119 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Nicholas Tesija</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
+
+<head>
+    <meta charset="UTF-8">
+    <title>Nicholas Tesija</title>
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-		<link type="text/css" rel="stylesheet" href="styles/stylesheet.css">
-	</head>
-	
-	<body>
-		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-			<header class="mdl-layout__header">
-				<div class="mdl-layout__header-row portfolio-header-row">
-					<span class="mdl-layout__title">
-						<div class="portfolio-logo"></div>
-						<span class="mdl-layout__title">Nicholas I. Tesija</span>
-						<a class="email" href="mailto:ntesija@umich.edu">ntesija@umich.edu</a>
-					</span>
-				</div>
-			</header>
-			<main class="mdl-layout__content">
-				<div class="page-content">
-					<div class="mdl-grid portfolio-main-content">
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
-								<img class="card-image" src="images/HeartHop.gif">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">Heart Hop</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								Fast-paced 8 player team battle! This was created for a 48 hour game jam. Our team won 1st place with this game.
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/HeartHop.7z" download>Download</a>
-							</div>
-						</div>
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
-								<img class="card-image" src="images/TrainTrackTrouble.png">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">Train Track Trouble</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								Battle your friends in a fast paced team train battle! This was my team's final project for EECS 494.
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/TrainTrackTrouble.7z" download>Download</a>
-							</div>
-						</div>
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
-								<img class="card-image" src="images/HopCatTapperCom.png">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">HopCatTapper.com</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper.
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<!-- <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="http://www.HopCatTapper.com" >View</a> -->
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://github.com/ntesija/HopCatTapper/tree/website">View Source</a>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+</head>
 
-							</div>
-						</div>
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
-								<img class="card-image" src="images/HopCatTapper.png">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">HopCat Tapper</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								Want to find out what the most alcohol per dollar you can get at HopCat? Check out the HopCat Tapper!
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://github.com/ntesija/HopCatTapper" >View Source</a>
-							</div>
-						</div>
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
-								<img class="card-image" src="images/SoundCloud.png">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">Soundcloud</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								I make songs for video games. There are some samples and full soundtracks on my SoundCloud, check it out!
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" target="_blank" href="https://soundcloud.com/nauticalnik" >View</a>
-							</div>
-						</div>
-						<div class="mdl-cell mdl-card mdl-shadow--4dp">
-							<div class="mdl-card__media">
-								<img class="card-image" src="images/ThroneThrottle.png">
-							</div>
-							<div class="mdl-card__title">
-								<h2 class="mdl-card__title-text">Throne Throttle</h2>
-							</div>
-							<div class="mdl-card__supporting-text">
-								Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
-							</div>
-							<div class="mdl-card__actions mdl-card--border">
-								<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="downloads/ThroneThrottle.7z" download>Download</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</main>
-		</div>
-	</body>
+<body>
+    <div class="header">
+        <div class="portfolio-logo"></div>
+        <div class="header-name">
+            Nicholas Tesija
+        </div>
+    </div>
+    <div class="header-spacer"></div>
+    <div class="content">
+        <div class="card">
+            <img class="card-image" src="images/HeartHop.gif">
+            <div class="card-content">
+                <div class="card-header">
+                    Heart Hop
+                </div>
+                <div class="card-description">
+                    Fast-paced 8 player team battle! This was created for a 48 hour game jam. Our team won 1st place with this game.
+                </div>
+                <a class="link" href="downloads/HeartHop.7z">Download</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/TrainTrackTrouble.png">
+            <div class="card-content">
+                <div class="card-header">
+                    Train Track Trouble
+                </div>
+                <div class="card-description">
+                    Battle your friends in a fast paced team train battle! This was my team's final project for EECS 494.
+                </div>
+                <a class="link" href="downloads/TrainTrackTrouble.7z">Download</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/ThroneThrottle.png">
+            <div class="card-content">
+                <div class="card-header">
+                    Throne Throttle
+                </div>
+                <div class="card-description">
+                    Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
+                </div>
+                <a class="link" href="downloads/ThroneThrottle.7z">Download</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/HopCatTapperCom.png">
+            <div class="card-content">
+                <div class="card-header">
+                    HopCatTapper.com
+                </div>
+                <div class="card-description">
+                    CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper.
+                </div>
+                <a class="link" target="_blank" href="https://github.com/ntesija/TapperWeb">View Source</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/HopCatTapper.png">
+            <div class="card-content">
+                <div class="card-header">
+                    HopCat Tapper
+                </div>
+                <div class="card-description">
+                    CURRENTLY UNDER MAINTENECE. Want to find out what the most alcohol per dollar you can get at HopCat? Check out the HopCat
+                    Tapper!
+                </div>
+                <a class="link" target="_blank" href="https://github.com/ntesija/HopCatTapper">View Source</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image" src="images/SoundCloud.png">
+            <div class="card-content">
+                <div class="card-header">
+                    Soundcloud
+                </div>
+                <div class="card-description">
+                    I make songs for video games. There are some samples and full soundtracks on my SoundCloud, check it out!
+                </div>
+                <a class="link" target="_blank" href="https://soundcloud.com/nauticalnik">View Site</a>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
