change portrait to be an image so it doesn't lazy load

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="header">
-        <div class="portfolio-logo"></div>
+        <img class="portfolio-logo" src="images/portrait.png">
         <div class="header-name">
             Nicholas Tesija
         </div>
