--- a/index.html
+++ b/index.html
@@ -4,25 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Nicholas Tesija</title>
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
-    <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-orange.min.css" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
-    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+          crossorigin="anonymous">
+    <link type="text/css"
+          rel="stylesheet"
+          href="styles/styles.css">
 </head>
 
 <body>
     <div class="header">
-        <img class="portfolio-logo" src="images/portrait.png">
+        <img class="portfolio-logo"
+             src="images/portrait.png">
         <div class="header-name">
             Nicholas Tesija
+        </div>
+        <div class="icon-container">
+            <a href="https://github.com/ntesija" target="_blank" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank" class="fab fa-linkedin-in"></a>
+            <a href="mailto:ntesija@umich.edu" class="far fa-envelope"></a>
         </div>
     </div>
     <div class="header-spacer"></div>
     <div class="content">
         <div class="card">
-            <img class="card-image" src="images/HeartHop.gif">
+            <img class="card-image"
+                 src="images/HeartHop.gif">
             <div class="card-content">
                 <div class="card-header">
                     Heart Hop
@@ -30,11 +38,13 @@
                 <div class="card-description">
                     Fast-paced 8 player team battle! This was created for a 48 hour game jam. Our team won 1st place with this game.
                 </div>
-                <a class="link" href="downloads/HeartHop.7z">Download</a>
+                <a class="link"
+                   href="downloads/HeartHop.7z">Download</a>
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/TrainTrackTrouble.png">
+            <img class="card-image"
+                 src="images/TrainTrackTrouble.png">
             <div class="card-content">
                 <div class="card-header">
                     Train Track Trouble
@@ -42,11 +52,13 @@
                 <div class="card-description">
                     Battle your friends in a fast paced team train battle! This was my team's final project for EECS 494.
                 </div>
-                <a class="link" href="downloads/TrainTrackTrouble.7z">Download</a>
+                <a class="link"
+                   href="downloads/TrainTrackTrouble.7z">Download</a>
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/ThroneThrottle.png">
+            <img class="card-image"
+                 src="images/ThroneThrottle.png">
             <div class="card-content">
                 <div class="card-header">
                     Throne Throttle
@@ -54,11 +66,13 @@
                 <div class="card-description">
                     Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
                 </div>
-                <a class="link" href="downloads/ThroneThrottle.7z">Download</a>
+                <a class="link"
+                   href="downloads/ThroneThrottle.7z">Download</a>
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/HopCatTapperCom.png">
+            <img class="card-image"
+                 src="images/HopCatTapperCom.png">
             <div class="card-content">
                 <div class="card-header">
                     HopCatTapper.com
@@ -66,11 +80,14 @@
                 <div class="card-description">
                     CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper.
                 </div>
-                <a class="link" target="_blank" href="https://github.com/ntesija/TapperWeb">View Source</a>
+                <a class="link"
+                   target="_blank"
+                   href="https://github.com/ntesija/TapperWeb">View Source</a>
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/HopCatTapper.png">
+            <img class="card-image"
+                 src="images/HopCatTapper.png">
             <div class="card-content">
                 <div class="card-header">
                     HopCat Tapper
@@ -79,11 +96,14 @@
                     CURRENTLY UNDER MAINTENECE. Want to find out what the most alcohol per dollar you can get at HopCat? Check out the HopCat
                     Tapper!
                 </div>
-                <a class="link" target="_blank" href="https://github.com/ntesija/HopCatTapper">View Source</a>
+                <a class="link"
+                   target="_blank"
+                   href="https://github.com/ntesija/HopCatTapper">View Source</a>
             </div>
         </div>
         <div class="card">
-            <img class="card-image" src="images/SoundCloud.png">
+            <img class="card-image"
+                 src="images/SoundCloud.png">
             <div class="card-content">
                 <div class="card-header">
                     Soundcloud
@@ -91,7 +111,9 @@
                 <div class="card-description">
                     I make songs for video games. There are some samples and full soundtracks on my SoundCloud, check it out!
                 </div>
-                <a class="link" target="_blank" href="https://soundcloud.com/nauticalnik">View Site</a>
+                <a class="link"
+                   target="_blank"
+                   href="https://soundcloud.com/nauticalnik">View Site</a>
             </div>
         </div>
     </div>
