--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link type="text/css"
           rel="stylesheet"
           href="styles/styles.css">
+        <link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
