--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
     <div class="content">
         <div class="card">
             <img class="card-image"
+                 src="images/wiki.png">
+            <div class="card-content">
+                <div class="card-header">
+                    Discoverable Wiki
+                </div>
+                <div class="card-description">
+                    An Angular 5 website that allows for a fun wiki which displays undiscovered pages to users. 
+                    This was going to be used alongside a Starfinder or DnD campaign. Utilizes a simple local server.
+                </div>
+                <a class="link"
+                   href="https://github.com/ntesija/DiscoverableWiki">View Source</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image"
                  src="images/HeartHop.gif">
             <div class="card-content">
                 <div class="card-header">
