--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
     <div class="content">
         <div class="card">
             <img class="card-image"
+                 src="images/squadStrike.png">
+            <div class="card-content">
+                <div class="card-header">
+                    Squad Strike Randomizer
+                </div>
+                <div class="card-description">
+                    A fun way to play Squad Strike in Super Smash Bros. Ultimate. Both players play the same 5 random characters.
+                    This app allows characters to be banned from randomization. Created with React.
+                </div>
+                <a class="link"
+                   href="https://ntesija.github.io/SquadStrike" target="_blank">View Site</a>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-image"
                  src="images/wiki.png">
             <div class="card-content">
                 <div class="card-header">
