--- a/index.html
+++ b/index.html
@@ -3,136 +3,148 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nicholas Tesija</title>
-    <link rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nik Tesija</title>
+    <link rel="preconnect"
+          href="https://fonts.googleapis.com">
+    <link rel="preconnect"
+          href="https://fonts.gstatic.com"
+          crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+          rel="stylesheet">
     <link type="text/css"
           rel="stylesheet"
           href="styles/styles.css">
-        <link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
+    <link rel="icon"
+          href="images/icon.png"
+          type="image/png"
+          sizes="16x16">
 </head>
 
 <body>
-    <div class="header">
-        <img class="portfolio-logo"
-             src="images/portrait.png">
-        <div class="header-name">
-            Nicholas Tesija
-        </div>
+    <img height="300px" width="300px"
+         src="images/portrait.jpg">
+    <div class="header-text">
+        <h1>Nik Tesija</h1>
         <div class="icon-container">
-            <a href="https://github.com/ntesija" target="_blank" class="fab fa-github"></a>
-            <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank" class="fab fa-linkedin-in"></a>
-            <a href="mailto:ntesija@umich.edu" class="far fa-envelope"></a>
+            <a href="https://www.linkedin.com/in/nicholas-tesija/"
+               target="_blank">LinkedIn</a>
+            <a href="mailto:ntesija+website@gmail.com"
+               target="_blank">e-mail me</a>
         </div>
     </div>
-    <div class="header-spacer"></div>
-    <div class="content">
-        <div class="card">
-            <img class="card-image"
-                 src="images/wiki.png">
-            <div class="card-content">
-                <div class="card-header">
-                    Discoverable Wiki
-                </div>
-                <div class="card-description">
-                    An Angular 5 website that allows for a fun wiki which displays undiscovered pages to users. 
-                    This was going to be used alongside a Starfinder or DnD campaign. Utilizes a simple local server.
-                </div>
-                <a class="link"
-                   href="https://github.com/ntesija/DiscoverableWiki">View Source</a>
-            </div>
+
+    <div>
+        <h2>things I do</h2>
+        <div class="box-thing">
+            <h3>programming</h3>
+            <span class="text">
+                I work at Google on Search, making it a pretty website as a front end engineer.
+                This website is my attempt to live life without Figma mocks.
+            </span>
         </div>
-        <div class="card">
-            <img class="card-image"
-                 src="images/HeartHop.gif">
-            <div class="card-content">
-                <div class="card-header">
-                    Heart Hop
-                </div>
-                <div class="card-description">
-                    Fast-paced 8 player team battle! This was created for a 48 hour game jam. Our team won 1st place with this game.
-                </div>
-                <a class="link"
-                   href="downloads/HeartHop.7z">Download</a>
-            </div>
+        <div class="box-thing">
+            <h3>music</h3>
+            <span class="text">
+                I make music under the name NNIK. It used to be Nautical Nik, but then someone said it sounded like I
+                would be singing sea shanties (which would be cool but I don't). I like to make simple sounding songs
+                that evoke the same feeling as using the spray can tool in MS Paint (they're ok). I hate my voice but I
+                still sing.
+            </span>
+            <a href="https://n.nik.band/"
+               target="_blank">Here is a link to a website with links to other things like my music.</a>
         </div>
-        <div class="card">
-            <img class="card-image"
-                 src="images/TrainTrackTrouble.png">
-            <div class="card-content">
-                <div class="card-header">
-                    Train Track Trouble
+        <div class="box-thing">
+            <h3>art</h3>
+
+            <div class="box-thing">
+                <h4>photo</h4>
+                <span class="text">
+                    I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take pictures
+                    of
+                    other
+                    things too.
+                </span>
+                <div class="box-thing row">
+                    <div class="multi">
+                        <img width="300px"
+                             src="images/telephones.jpg"
+                             alt="a 35mm photo of some payphones">
+                        <span class="text">
+                            This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
+                            see
+                            that this stuff is still lying around. I had a realization recently that I don't think I
+                            ever
+                            actually used a pay phone as a kid.
+                        </span>
+                    </div>
+                    <div class="multi">
+                        <img width="300px"
+                             src="images/picnik.jpg"
+                             alt="a 35mm photo of a picnic">
+                        <span class="text">
+                            My parents visit me sometimes and I like to record those moments. Here is us having a
+                            picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
+                        </span>
+                    </div>
                 </div>
-                <div class="card-description">
-                    Battle your friends in a fast paced team train battle! This was my team's final project for EECS 494.
-                </div>
-                <a class="link"
-                   href="downloads/TrainTrackTrouble.7z">Download</a>
             </div>
-        </div>
-        <div class="card">
-            <img class="card-image"
-                 src="images/ThroneThrottle.png">
-            <div class="card-content">
-                <div class="card-header">
-                    Throne Throttle
+
+            <div class="box-thing">
+                <h4>video</h4>
+                <span class="text">
+                    I often walk around with my hi8 video camera and film random things. I try to capture the essence of
+                    old family videos.
+                </span>
+                <div class="box-thing row">
+                    <div class="multi">
+                        <video controls
+                               width="300">
+                            <source src="images/hi8.mp4"
+                                    type="video/mp4" />
+                        </video>
+                        <span class="text">
+                            This is a video I took of random things including me and the streets of San Francisco. I
+                            have a
+                            lot of videos like this because I often get bored and wander around the city.
+                        </span>
+                    </div>
                 </div>
-                <div class="card-description">
-                    Battle to be king of the hill in a car... in space! Created for a 48 hour game jam and won 4th place.
-                </div>
-                <a class="link"
-                   href="downloads/ThroneThrottle.7z">Download</a>
             </div>
-        </div>
-        <div class="card">
-            <img class="card-image"
-                 src="images/HopCatTapperCom.png">
-            <div class="card-content">
-                <div class="card-header">
-                    HopCatTapper.com
+
+            <div class="box-thing">
+                <h4>3d stuff</h4>
+                <span class="text">
+                    My brother is an amazing 2d artist so I wanted to do something different. I decided to begin
+                    learning some 3d arts. .
+                </span>
+
+
+                <div class="box-thing">
+                    <h5>sculpting</h5>
+                    <span class="text">
+                        I recently started learning to sculpt marble. I'm not good at it yet so I don't have any
+                        pictures.
+                        It's a fun hobby that results in me using half of the trunk space in my car to store a block of
+                        alabaster that I may never use.
+                    </span>
                 </div>
-                <div class="card-description">
-                    CURRENTLY UNDER MAINTENECE. A web based version of my HopCat Tapper.
+
+                <div class="box-thing">
+                    <h5>molding and casting</h5>
+                    <span class="text">
+                        I also just started to learn how to cast molds of things in plastic, often things I mold out of
+                        clay. I am not quite good enough to share my creations as I keep making bad molds or ugly casts.
+                        Hopefully I will be able to make something cool soon.
+                    </span>
                 </div>
-                <a class="link"
-                   target="_blank"
-                   href="https://github.com/ntesija/TapperWeb">View Source</a>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-image"
-                 src="images/HopCatTapper.png">
-            <div class="card-content">
-                <div class="card-header">
-                    HopCat Tapper
-                </div>
-                <div class="card-description">
-                    CURRENTLY UNDER MAINTENECE. Want to find out what the most alcohol per dollar you can get at HopCat? Check out the HopCat
-                    Tapper!
-                </div>
-                <a class="link"
-                   target="_blank"
-                   href="https://github.com/ntesija/HopCatTapper">View Source</a>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-image"
-                 src="images/SoundCloud.png">
-            <div class="card-content">
-                <div class="card-header">
-                    Soundcloud
-                </div>
-                <div class="card-description">
-                    I make songs for video games. There are some samples and full soundtracks on my SoundCloud, check it out!
-                </div>
-                <a class="link"
-                   target="_blank"
-                   href="https://soundcloud.com/nauticalnik">View Site</a>
             </div>
         </div>
     </div>
+
+    <h2 class="final-thought">
+I hope you liked my website. I spent 2 hours doing this. It looks terrible and I am proud of that
+    </h2>
 </body>
 
 </html>
