--- a/index.html
+++ b/index.html
@@ -5,32 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nik Tesija</title>
-    <link rel="preconnect"
-          href="https://fonts.googleapis.com">
-    <link rel="preconnect"
-          href="https://fonts.gstatic.com"
-          crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-          rel="stylesheet">
-    <link type="text/css"
-          rel="stylesheet"
-          href="styles/styles.css">
-    <link rel="icon"
-          href="images/icon.png"
-          type="image/png"
-          sizes="16x16">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
-    <img height="300px" width="300px"
-         src="images/portrait.jpg">
+    <img height="300px" width="300px" src="images/portrait.jpg">
     <div class="header-text">
         <h1>Nik Tesija</h1>
         <div class="icon-container">
-            <a href="https://www.linkedin.com/in/nicholas-tesija/"
-               target="_blank">LinkedIn</a>
-            <a href="mailto:ntesija+website@gmail.com"
-               target="_blank">e-mail me</a>
+            <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">LinkedIn</a>
+            <a href="mailto:ntesija+website@gmail.com" target="_blank">e-mail me</a>
         </div>
     </div>
 
@@ -51,44 +39,11 @@
                 that evoke the same feeling as using the spray can tool in MS Paint (they're ok). I hate my voice but I
                 still sing.
             </span>
-            <a href="https://n.nik.band/"
-               target="_blank">Here is a link to a website with links to other things like my music.</a>
+            <a href="https://n.nik.band/" target="_blank">Here is a link to a website with links to other things like my
+                music.</a>
         </div>
         <div class="box-thing">
             <h3>art</h3>
-
-            <div class="box-thing">
-                <h4>photo</h4>
-                <span class="text">
-                    I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take pictures
-                    of
-                    other
-                    things too.
-                </span>
-                <div class="box-thing row">
-                    <div class="multi">
-                        <img width="300px"
-                             src="images/telephones.jpg"
-                             alt="a 35mm photo of some payphones">
-                        <span class="text">
-                            This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
-                            see
-                            that this stuff is still lying around. I had a realization recently that I don't think I
-                            ever
-                            actually used a pay phone as a kid.
-                        </span>
-                    </div>
-                    <div class="multi">
-                        <img width="300px"
-                             src="images/picnik.jpg"
-                             alt="a 35mm photo of a picnic">
-                        <span class="text">
-                            My parents visit me sometimes and I like to record those moments. Here is us having a
-                            picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
-                        </span>
-                    </div>
-                </div>
-            </div>
 
             <div class="box-thing">
                 <h4>video</h4>
@@ -98,10 +53,20 @@
                 </span>
                 <div class="box-thing row">
                     <div class="multi">
-                        <video controls
-                               width="300">
-                            <source src="images/hi8.mp4"
-                                    type="video/mp4" />
+                        <h5><a href="https://www.youtube.com/watch?v=z-lqdYqVWfw">Sonder</a></h5>
+                        <span class="text">
+                            I made a movie called Sonder. It follows 8 people through San Francisco as they film parts
+                            of their day. It arose from me wanting to see what other people were doing with their days
+                            as I was feeling like I was not doing enough. It was really uplifting to see that everyone
+                            else was doing just about the same things I was doing too.
+                        </span>
+                    </div>
+                </div>
+                <div class="box-thing row">
+                    <div class="multi">
+                        <h5>other videos</h5>
+                        <video controls width="300">
+                            <source src="images/hi8.mp4" type="video/mp4" />
                         </video>
                         <span class="text">
                             This is a video I took of random things including me and the streets of San Francisco. I
@@ -119,14 +84,16 @@
                     learning some 3d arts. .
                 </span>
 
-
                 <div class="box-thing">
                     <h5>sculpting</h5>
+                    <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble">
+                    <img width="300px" src="images/other_marble.jpg"
+                        alt="a sculpture made from marble showing a nude male figure">
                     <span class="text">
-                        I recently started learning to sculpt marble. I'm not good at it yet so I don't have any
-                        pictures.
+                        I recently started learning to sculpt stone.
                         It's a fun hobby that results in me using half of the trunk space in my car to store a block of
-                        alabaster that I may never use.
+                        alabaster or marble that I may never use. This is a picture of my first two marble pieces I
+                        made.
                     </span>
                 </div>
 
@@ -139,11 +106,40 @@
                     </span>
                 </div>
             </div>
+
+            <div class="box-thing">
+                <h4>photo</h4>
+                <span class="text">
+                    I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take pictures
+                    of
+                    other
+                    things too.
+                </span>
+                <div class="box-thing row">
+                    <div class="multi">
+                        <img width="300px" src="images/telephones.jpg" alt="a 35mm photo of some payphones">
+                        <span class="text">
+                            This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
+                            see
+                            that this stuff is still lying around. I had a realization recently that I don't think I
+                            ever
+                            actually used a pay phone as a kid.
+                        </span>
+                    </div>
+                    <div class="multi">
+                        <img width="300px" src="images/picnik.jpg" alt="a 35mm photo of a picnic">
+                        <span class="text">
+                            My parents visit me sometimes and I like to record those moments. Here is us having a
+                            picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <h2 class="final-thought">
-I hope you liked my website. I spent 2 hours doing this. It looks terrible and I am proud of that
+        I hope you liked my website. I spent 2 hours doing this. It looks terrible and I am proud of that
     </h2>
 </body>
 
